# VINDRIKTNING-ESP32-C3

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTES  README.md  pyproject.toml
docs/: build_instructions.md
libs/3dmodels/lcsc.3dshapes/: C2220_L5.6-W5.0-H3.0.step  C2220_L5.6-W5.0-H3.0.wrl  CONN-SMD_1.25-2P.step  CONN-SMD_1.25-2P.wrl  CONN-SMD_BM04B-SRSS-TBT-LF-SN.step  CONN-SMD_BM04B-SRSS-TBT-LF-SN.wrl  CONN-SMD_ZH1.5-LS-4P.step  CRYSTAL-SMD_L3.2-W1.5-1.step  F0402.step  F0402.wrl  F0603_L1.7-W0.9-H0.7.step  F0603_L1.7-W0.9-H0.7.wrl  LED-SMD_4P-L3.5-W2.8-BR-1.step  LED-SMD_4P-L3.5-W2.8-BR-1.wrl  LGA-20_L10.1-W10.1-P1.25-TL.step  SOD-123FL_L2.8-W1.8-LS3.7-RD-1.step  TYPE-C-TH_L8.9-W3.1-H10.0.step  TYPE-C-TH_L8.9-W3.1-H10.0.wrl  WIFIM-SMD_ESP32-C3-MINI-1.wrl  WIFIM-SMD_ESP32-C3-MINI-MINI-1U.step  WIFIM-SMD_ESP32-C3-MINI-MINI-1U.wrl  WSOF-6_L1.6-W2.6-H0.8-P0.50.step  WSOF-6_L1.6-W2.6-H0.8-P0.50.wrl
libs/footprints/lcsc.pretty/: C0402.kicad_mod  C0805.kicad_mod  C2220.kicad_mod  CONN-SMD_1.25-2P.kicad_mod  CONN-SMD_4P-P1.00_SM04B-SRSS-TB-LF-SN.kicad_mod  CONN-SMD_BM04B-SRSS-TBT-LF-SN.kicad_mod  CONN-SMD_ZH1.5-4AB.kicad_mod  CRYSTAL-SMD_L3.2-W1.5-1.kicad_mod  F0402.kicad_mod  F0603.kicad_mod  KEY-SMD_4P-L4.2-W3.2-P2.20-LS4.6.kicad_mod  LED-SMD_4P-L3.5-W2.8-BR-1.kicad_mod  LED0805-R-RD.kicad_mod  LGA-20_L10.1-W10.1-P1.25-TL.kicad_mod  R0402.kicad_mod  SC-74A-5_L2.9-W1.6-P0.95-LS2.8-BR.kicad_mod  SENSORM-TH_HLK-LD2410B-P.kicad_mod  SOD-123F_L2.8-W1.8-LS3.7-RD.kicad_mod  SOD-323_L1.8-W1.3-LS2.5-RD.kicad_mod  SOT-23-3_L2.9-W1.3-P1.90-LS2.4-BR.kicad_mod  SOT-23-5_L3.0-W1.7-P0.95-LS2.8-BL.kicad_mod  SOT-666-6_L1.6-W1.2-P0.50-LS1.6-BL.kicad_mod  USB-C-TH_TYPE-C-USB-14P.kicad_mod  VSON8_L2.0-W2.3-P0.50-LS3.1-BL.kicad_mod  WIFIM-SMD_ESP32-C3-MINI-MINI-1U.kicad_mod  WSOF-6_L2.6-W1.6-P0.50-TL-EP.kicad_mod
libs/footprints/logo.pretty/: faebryk_logo.kicad_mod
source/: fp-lib-table  main.kicad_dru  main.kicad_pcb  main.kicad_prl  main.kicad_pro  main.net
src/kicad/libs/3dmodels/lcsc.3dshapes/: CONN-SMD_ZH1.5-LS-4P.wrl  SC-74A-5_L2.9-W1.6-P0.95-LS2.8-BR.wrl
src/kicad/libs/footprints/lcsc.pretty/: CONN-SMD_1.25-2P.kicad_mod  CONN-SMD_BM04B-SRSS-TBT-LF-SN.kicad_mod  KEY-SMD_4P-L4.2-W3.2-P2.20-LS4.6.kicad_mod  LED0805-RD_RED.kicad_mod  R0402.kicad_mod  (+5 more)
src/kicad/main/: main.kicad_dru  main.kicad_pcb  main.kicad_prl  main.kicad_pro  main.net
src/vindriktning_esp32_c3/: app.py  main.py  pcb.py  picker.py  pickers.py  util.py  vindriktning_esp32_c3_base.py
src/vindriktning_esp32_c3/modules/: DigitalLED.py  FanConnector.py  FanController.py  IKEAVindriktningPMSensorInterface.py  PCBMount.py  PM1006Connector.py  UARTVoltageDropper.py
